--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://moiseshp.github.io/cotizador-seguro-vehicular/",
+  "homepage": "http://objetivomarte.github.io/cotizadorvehicularRimacv1/",
   "name": "cotizador-seguro-vehicular",
   "version": "0.1.0",
   "private": true,
